finished checking test cases 1-15
added PatientsUnderCare for doctor 
30-days in advance working schedule 
reminder function (pending request in 2 days) for doctor 
message box function for cancelled / rejected requests / appointment for doctor and patient